Add SVM baseline notebook and results
Add notebooks/classical_baselines/svm.ipynb implementing a classical RBF SVM baseline: loads processed datasets, trains and evaluates SVC models (accuracy, macro F1, training/inference times) for full and subsampled training sizes, and writes aggregated metrics. Include the generated results file results/classical_svm_baseline_results.json. Update .gitignore to ignore all *.ipynb_checkpoints.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /qml-env
 /prototype/.ipynb_checkpoints
 *.npy
-/notebooks/data_processing/.ipynb_checkpoints
 /data
 .DS_Store
+*.ipynb_checkpoints
